apps/kibana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      nodeSelector:
        environment: elk_queue
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.16.3
        ports:
        - containerPort: 5601
        volumeMounts:
        - name: kibana-config
          mountPath: /usr/share/kibana/config/kibana.yml
          subPath: kibana.yml
        resources:
          requests:
            memory: "3Gi"
            cpu: 100m
          limits:
            memory: "5Gi"
            cpu: 500m
      volumes:
      - name: kibana-config
        configMap:
          name: kibana-config
