apps/kibana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sift-kibana-ingress
  namespace: opolo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: kibana.prod.quiinsfelicity.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
